--- a/_pages/team.html
+++ b/_pages/team.html
@@ -39,7 +39,7 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
   </li>	
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	  </li>
 	<li><strong>  Jinglan Qiu </strong>  2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) <br>	  </li> 
-<!--	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> -->
+	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
 
 	
 
