--- a/_pages/team.html
+++ b/_pages/team.html
@@ -26,7 +26,7 @@ author_profile: true
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	
-	<li><strong>  Yushan Hu</strong> 2021.09 – Present<br> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)
+	<li><strong>  Yushan Hu</strong>  (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) 2021.09 – Present<br>
  <!--	Internship:  <br>  -->
 Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
@@ -40,8 +40,11 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
 	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 </li>
-	<li><strong>  Jinglan Qiu </strong>  2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) <br>	  </li> 
+	<li><strong>  Jinglan Qiu </strong>  (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2022.05 – Present  <br>	  </li> 
 	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
+	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
+	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	  </li>
+	
 
 	
 
@@ -65,13 +68,18 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 <h4>Master Students</h4>
 
 <ul>	
-	<li><strong>  Haochen Ning</strong>  2021.09 – Present<br>	  </li>
+	<li><strong>  Haochen Ning</strong>  2021.09 – 2023.8<br>	  
+	Award 1: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize
+	</li>
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Longwen Shang</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.09 – Present<br>	  </li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shaghayegh AhooeiNejad </strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Farbod Esmaeili</strong>  2022.09 – Present<br>	  </li>
+	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	  </li>
+	<li><strong>  Jing Zhang </strong>  (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2023.09 – Present<br>	  	  </li>
+	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 </ul>
 
 <h4>Postdoctorate Fellows and Research Associates</h4>
