--- a/_pages/team.html
+++ b/_pages/team.html
@@ -82,6 +82,13 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 </ul>
 
+
+<h4>Staff/Programmer</h4>
+
+<ul>
+  <li><strong> Shelly Gao </strong> 2022.06 – current <br>
+</ul>
+
 <h4>Postdoctorate Fellows and Research Associates</h4>
 
 <ul>
