--- a/_pages/team.html
+++ b/_pages/team.html
@@ -10,14 +10,14 @@ author_profile: true
 <h4>PhD Students</h4>
 <ul>
 	
-	<li><strong>  Shuai You</strong> (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic), 2019.09 – Present<br>
+	<li><strong>  Shuai You</strong> 2019.09 – Present (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic)<br>
  <!--	Internship:  <br>  -->
  Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-	<li><strong>  Kailun Bai</strong> 2020.09 – Present<br>	(Co-supervisor Dr. Xiaojian Shao, National Research Council Canada)
+	<li><strong>  Kailun Bai</strong> 2020.09 – Present	(Co-supervisor Dr. Xiaojian Shao, National Research Council Canada) <br>
 	 <!--	Internship:  <br>  -->
   Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
   Award 2: (2022.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
@@ -26,7 +26,7 @@ author_profile: true
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	
-	<li><strong>  Yushan Hu</strong>  (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) 2021.09 – Present<br>
+	<li><strong>  Yushan Hu</strong> 2021.09 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)<br>
  <!--	Internship:  <br>  -->
 Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
@@ -35,12 +35,12 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
 
-	<li><strong>  Chang Bi</strong> (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC),  2021.09 – Present<br>
+	<li><strong>  Chang Bi</strong>  2021.09 – Present (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC)<br>
   </li>	
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
 	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 </li>
-	<li><strong>  Jinglan Qiu </strong>  (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2022.05 – Present  <br>	  </li> 
+	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	  </li> 
 	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
 	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
 	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	  </li>
@@ -73,12 +73,12 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	</li>
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Longwen Shang</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.09 – Present<br>	  </li>
+	<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  </li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shaghayegh AhooeiNejad </strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Farbod Esmaeili</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	  </li>
-	<li><strong>  Jing Zhang </strong>  (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2023.09 – Present<br>	  	  </li>
+	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	  </li>
 	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 </ul>
 
