--- a/_pages/team.html
+++ b/_pages/team.html
@@ -92,7 +92,7 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 <h4>Postdoctorate Fellows and Research Associates</h4>
 
 <ul>
-  <li><strong> Elham Majd </strong> 2022.06 – current <br>
+  <li><strong> Elham Majd </strong> 2022.06 – 2023.06 <br>
   <!--First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li> -->
 
 
