--- a/_pages/team.html
+++ b/_pages/team.html
@@ -40,7 +40,9 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
 	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
 </li>
-	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	  </li> 
+	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	  
+		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+</li> 
 	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
 	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
 	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	  </li>
@@ -72,12 +74,17 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	Award 1: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize
 	</li>
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  </li>
+	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	 
+	Internship: (2023.5-2023.8) VERACYTE </li>
+	<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	 
+	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+	</li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shaghayegh AhooeiNejad </strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Farbod Esmaeili</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	  </li>
+	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	
+	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+	</li>
 	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	  </li>
 	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 </ul>
@@ -89,14 +96,14 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
   <li><strong> Shelly Gao </strong> 2022.06 – current <br>
 </ul>
 
+  <!--
 <h4>Postdoctorate Fellows and Research Associates</h4>
 
 <ul>
   <li><strong> Elham Majd </strong> 2022.06 – 2023.06 <br>
-  <!--First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li> -->
-
-
+First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li> 
 </ul>
+-->
 
 <h4>Long-term Visitors</h4>
 <ul>
@@ -118,10 +125,10 @@ Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>
 Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
 Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
  <!--   Honer Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+ First job: PhD Student, University of Washington  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>
+<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.12<br>   </li>
 <li><strong>  Markus Swoveland (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>	
 
 
@@ -138,9 +145,12 @@ Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
 First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li>
 
 
-</ul>
 
 	  
+  <li><strong> Elham Majd </strong> 2022.06 – 2023.06 <br>
+  <!--First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar-alaqeeli/"> AI Yamamah University</a>, Saudi Arabia </li> -->
+
+</ul>
 	  
 	
 <h4>Master Students</h4>
