--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -5,25 +5,25 @@ permalink: /openings/
 author_profile: true
 ---
 
+<!--
 <h2>Post Doctoral Fellowships </h2> 
 
-<!-- <p> A postdoctoral fellow specifically for a NRC funded project (<a href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document</a>). <br>	 -->
-
-<!-- <p> A general postdoctoral fellow hiring (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred.  Candidates are welcome to apply through <a href="https://www.mathjobs.org/jobs/list/16369"> this job posting link </a>, which will be jointly funded by <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a> and my research grants. Other co-fundings can be applied (as alternatives of PIMS funding) by candidates, such as <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br> -->
+<p> A postdoctoral fellow specifically for a NRC funded project (<a href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document</a>). <br>	
+<p> A general postdoctoral fellow hiring (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred.  Candidates are welcome to apply through <a href="https://www.mathjobs.org/jobs/list/16369"> this job posting link </a>, which will be jointly funded by <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a> and my research grants. Other co-fundings can be applied (as alternatives of PIMS funding) by candidates, such as <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
 <p>  (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">Advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred. Other co-fundings can be applied by candidates to boost salaries, such as     <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a>, <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
-	
+-->	
 
 
 <h2>PhD/MSc students </h2> 
 <ol>
-	<li> I have multiple openings in PhD and MSc students. PhD applicants are preferred. </li> 
+	<li> I have multiple openings in PhD and MSc students. </li> 
         <li> Department offer about $5000/year TA salary for all graduate students. </li>
-	<li> Entrance scholarship is available for students selected by committee.</li> 
-	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. </li> 
-	<li> Research Assistant positions (supported by my research grants) are available for students range from $8000 to $30000 per year (effective Sept 2023). </li>
+	<li> Entrance scholarship is available for students selected by committee. (a few thousands of dollars) </li> 
+	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. (a few thousands of dollars) </li> 
+	<li> Research Assistant positions (supported by my research grants) are available for students range from $7000 to $30000 per year (effective Sept 2023). </li>
 	<li> Outstanding students have opportunites to have "research" internship supported by MITACS. </li>
-	<li> My students are also encouraged to apply <a href="http://vada.cs.umanitoba.ca/admissions/application-form/"> VADA scholarship </a>. </li>
-	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $2000 per term, which is much lower than most other universities in Canada.</li>
+	<li> My strong students are also encouraged to apply <a href="https://ai4ph-hrtp.ca/about-our-scholarship/"> AI4PH scholarship </a>. </li>
+	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $8000-9000 per year, which is much lower than most other universities in Canada.</li>
 <ol> <br>
 
 <h2>Intern students </h2> 
@@ -37,6 +37,5 @@ author_profile: true
 	<li> <a href="https://www.biotalent.ca/programs/student-work-placement-program/">  BioTalent </a> </li>	
 	<li> <a href="https://eco.ca/environmental-professionals/employment-funding-and-job-board/apply-for-job-funding/">  EcoCanada </a> </li>
 	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li>
-	<li> <a href="https://cahrc-ccrha.ca/programs/agritalent">  Canadian Agricultural Human Resource Council </a> </li> 
 <ol>
 -->
