--- a/_pages/team.html
+++ b/_pages/team.html
@@ -106,7 +106,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 <h4>Long-term Visitors</h4>
 <ul>
-	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
+	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – 2023.08<br>	
 	<li><strong>  Yao Dong </strong> (Senior Technician, Hebei University of Technology, China， funded by CSC grant), 2021.12 – Present<br>						
 	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<br>	
 </ul>
