--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -16,21 +16,21 @@ author_profile: true
 
 <h2>PhD/MSc students </h2> 
 <ol>
-	<li> I have multiple openings in PhD and MSc students. </li> 
-        <li> Department offer about $5000/year TA salary for all graduate students. </li>
-	<li> Entrance scholarship is available for students selected by committee. (a few thousands of dollars) </li> 
+	<li> I have multiple openings for PhD and MSc students. </li> 
+        <li> Department offers all graduate students a $5000/year TA salary. </li>
+	<li> Entrance scholarship is available for students selected by the committee. (a few thousands of dollars) </li> 
 	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. (a few thousands of dollars) </li> 
-	<li> Research Assistant positions (supported by my research grants) are available for students range from $7000 to $30000 per year (effective Sept 2023). </li>
-	<li> Outstanding students have opportunites to have "research" internship supported by MITACS. </li>
-	<li> My strong students are also encouraged to apply <a href="https://ai4ph-hrtp.ca/about-our-scholarship/"> AI4PH scholarship </a>. </li>
+	<li> Research Assistant positions (supported by my research grants) are available for students and range from $7000 to $30000 per year (effective Sept 2023). </li>
+	<li> Outstanding students have opportunities to have "research" internships supported by MITACS and other sources. I do not suggest students take non-research internships.</li>
+	<li> Strong students are also encouraged to apply <a href="https://ai4ph-hrtp.ca/about-our-scholarship/"> AI4PH scholarship </a>. </li>
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $8000-9000 per year, which is much lower than most other universities in Canada.</li>
 <ol> <br>
 
 <h2>Intern students </h2> 
 	
-<p> I am hiring student interns, who has solid statistics knowledge, strong programming skills (R is prefered), and excellent scientific writing skills.  <br>	
+<p> I am hiring student interns with solid statistics knowledge, strong programming skills (R is preferred), and excellent scientific writing skills.  <br>	
 	<!--
-<h2> Prospective graduate or senior undergraduae students who are Canadian and permenant residence should check the following funding resources provided by the Government of Canada’s Student Work Placement Program</h2> 
+<h2> Prospective graduate or senior undergraduate students who are Canadian and permanent residence should check the following funding resources provided by the Government of Canada’s Student Work Placement Program</h2> 
 <ol>	
 	<li> <a href="https://www.wil-ait.digital/en/"> WIL Digital </a> </li> 
         <li> <a href="https://technationcanada.ca/en/future-workforce-development/career-ready-program/">  Technation </a> </li>
