--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -20,7 +20,7 @@ author_profile: true
         <li> Department offers all graduate students a $5000/year TA salary. </li>
 	<li> Entrance scholarship is available for students selected by the committee. (a few thousands of dollars) </li> 
 	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. (a few thousands of dollars) </li> 
-	<li> Research Assistant positions (supported by my research grants) are available for students and range from $7000 to $30000 per year (effective Sept 2023). </li>
+	<li> Research Assistant positions (supported by my research grants) are available for students and range from $7000-30000 per year (effective Sept 2023). </li>
 	<li> Outstanding students have opportunities to have "research" internships supported by MITACS and other sources. I do not suggest students take non-research internships.</li>
 	<li> Strong students are also encouraged to apply <a href="https://ai4ph-hrtp.ca/about-our-scholarship/"> AI4PH scholarship </a>. </li>
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $8000-9000 per year, which is much lower than most other universities in Canada.</li>
