--- a/_pages/team.html
+++ b/_pages/team.html
@@ -20,16 +20,18 @@ author_profile: true
 	<li><strong>  Kailun Bai</strong> 2020.09 – Present	(Co-supervisor Dr. Xiaojian Shao, National Research Council Canada) <br>
 	 <!--	Internship:  <br>  -->
   Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
-  Award 2: (2022.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+  Award 2: (2022.9-2024.2) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $30,500 </font> <br> -->
+ <!-- Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
+		<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 	</li>
 	
 	<li><strong>  Yushan Hu</strong> 2021.09 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)<br>
  <!--	Internship:  <br>  -->
-Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
-Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br>
+Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $42,000 </font> <br> -->
+Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <be>
+<!-- Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->		
 <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
 <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -38,14 +40,17 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 	<li><strong>  Chang Bi</strong>  2021.09 – Present (Co-supervisor <a href="https://www.uvic.ca/research/centres/arc/people/adjunct-members/fabbro-sebastien.php"> Dr. Sebastien Fabbro</a>, NRC)<br>
   </li>	
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
-	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $19,000 </font> <br> -->
+	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $11,500 </font> <br> -->
 </li>
 	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	  
 		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 </li> 
 	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
 	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
-	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	  </li>
+	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	 
+	<!-- Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
+	</li>
+	
 	
 
 	
@@ -70,17 +75,16 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 <h4>Master Students</h4>
 
 <ul>	
-	<li><strong>  Haochen Ning</strong>  2021.09 – 2023.8<br>	  
-	Award 1: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize
+	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  
+	<!-- Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
 	</li>
-	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	 
 	Internship: (2023.5-2023.8) VERACYTE </li>
 	<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	 
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+   <!-- Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->		
 	</li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Farbod Esmaeili</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 	</li>
@@ -154,6 +158,11 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
+	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
+	Award: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize
+	First job: PhD student, UVic Math & Stat Department			
+	</li>
+
 	<li><strong>  Xiaolin Huang</strong> 2022.06<br>
         Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
  <!--	Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
