--- a/_pages/team.html
+++ b/_pages/team.html
@@ -110,9 +110,10 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 <h4>Long-term Visitors</h4>
 <ul>
-	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – 2023.08<br>	
-	<li><strong>  Yao Dong </strong> (Senior Technician, Hebei University of Technology, China， funded by CSC grant), 2021.12 – Present<br>						
-	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<br>	
+	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
+	<li><strong>  Qianli Ma </strong> (Associate Professor, Shanxi University, Canada), 2023.09 – Present <br>	
+	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<be>	
+	<li><strong>  Lina Li </strong> (PhD student, University of Saskatchewan), 2023.08 – Present<br>	
 </ul>
 
 
@@ -131,8 +132,10 @@ Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
  First job: PhD Student, University of Washington  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>
-<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.12<br>   </li>
+<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>
 <li><strong>  Markus Swoveland (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>	
+<li><strong>  Houshi He </strong> MITACS Globalink Research Internship, 2023.08 – 2023.10<br>   </li>	
+<li><strong>  Yanjun Guo </strong> MITACS Globalink Research Internship, 2023.08 – 2023.10<br>   </li>	
 
 
 	
@@ -251,6 +254,8 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 <h4>Long-term Visitors</h4>
 <ul>
 	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
+	<li><strong>  Yao Dong </strong> (Faculty, Hebei University of Technology, China， funded by CSC grant), 2021.12 – 2023.08<br>						
+
 </ul>
 
 	<h4>Undergraduate Students</h4>
