--- a/_pages/team.html
+++ b/_pages/team.html
@@ -111,9 +111,9 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Long-term Visitors</h4>
 <ul>
 	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
-	<li><strong>  Qianli Ma </strong> (Associate Professor, Shanxi University, Canada), 2023.09 – Present <br>	
+	<li><strong>  Qianli Ma </strong> (Associate Professor, Shanxi University, China), 2023.09 – Present <br>	
 	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – Present<be>	
-	<li><strong>  Lina Li </strong> (PhD student, University of Saskatchewan), 2023.08 – Present<br>	
+	<li><strong>  Lina Li </strong> (PhD student, University of Saskatchewan, Canada), 2023.08 – Present<br>	
 </ul>
 
 
