--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -17,7 +17,7 @@ author_profile: true
 <h2>PhD/MSc students </h2> 
 <ol>
 	<li> I have multiple openings for PhD and MSc students. </li> 
-        <li> Department offers all graduate students a $5000/year TA salary. </li>
+        <li> Department offers all graduate students about $4600/year TA salary. </li>
 	<li> Entrance scholarship is available for students selected by the committee. (a few thousands of dollars) </li> 
 	<li> Students with A-class GPA receive Faculty of Science scholarship since their second year. (a few thousands of dollars) </li> 
 	<li> Research Assistant positions (supported by my research grants) are available for students and range from $7000-30000 per year (effective Sept 2023). </li>
