--- a/_pages/openings.html
+++ b/_pages/openings.html
@@ -5,14 +5,6 @@ permalink: /openings/
 author_profile: true
 ---
 
-<!--
-<h2>Post Doctoral Fellowships </h2> 
-
-<p> A postdoctoral fellow specifically for a NRC funded project (<a href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document</a>). <br>	
-<p> A general postdoctoral fellow hiring (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred.  Candidates are welcome to apply through <a href="https://www.mathjobs.org/jobs/list/16369"> this job posting link </a>, which will be jointly funded by <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a> and my research grants. Other co-fundings can be applied (as alternatives of PIMS funding) by candidates, such as <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
-<p>  (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">Advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred. Other co-fundings can be applied by candidates to boost salaries, such as     <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a>, <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
--->	
-
 
 <h2>PhD/MSc students </h2> 
 <ol>
@@ -26,10 +18,16 @@ author_profile: true
 	<li> <a href="https://www.uvic.ca/vpfo/accounting/assets/docs/tuition/tuition-schedule.pdf"> UVic tuition </a> is about $8000-9000 per year, which is much lower than most other universities in Canada.</li>
 <ol> <br>
 
-<h2>Intern students </h2> 
+<!--
+<h2>Post Doctoral Fellowships </h2> 
+
+<p> A postdoctoral fellow specifically for a NRC funded project (<a href="https://ubcxzhang.github.io/files/NRC_postdoc.pdf">advertisements document</a>). <br>	
+<p> A general postdoctoral fellow hiring (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred.  Candidates are welcome to apply through <a href="https://www.mathjobs.org/jobs/list/16369"> this job posting link </a>, which will be jointly funded by <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a> and my research grants. Other co-fundings can be applied (as alternatives of PIMS funding) by candidates, such as <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
+<p>  (<a href="https://ubcxzhang.github.io/files/Postdoctoral_Fellowship_Advertisment.pdf">Advertisements document</a>). This postdoc is expected to work on my recently <a href="https://ubcxzhang.github.io/projects/"> funded projects</a>. Successful candidates are expected to have solid statistics knowledge and strong skills in programming and writing. Background in machine learning and/or statistical genomics are preferred. Other co-fundings can be applied by candidates to boost salaries, such as     <a href="https://www.pims.math.ca/scientific/postdoctoral"> PIMS </a>, <a href="http://liberero.ca/fellowship-details/"> LIBERERO postdoc </a>, <a href="http://www.nserc-crsng.gc.ca/Students-Etudiants/PD-NP/PDF-BP_eng.asp"> NSERC postdoc </a>, <a href="https://www.mitacs.ca/en/programs/accelerate/industrial-postdoc"> MITACS postdoc </a>, <a href="https://www.mitacs.ca/en/programs/globalink/come-to-canada/early-career-fellowship-china"> MITACS Fellowship - China </a>.  <br>
+-->	
+<!-- <h2>Intern students </h2> 
 	
 <p> I am hiring student interns with solid statistics knowledge, strong programming skills (R is preferred), and excellent scientific writing skills.  <br>	
-	<!--
 <h2> Prospective graduate or senior undergraduate students who are Canadian and permanent residence should check the following funding resources provided by the Government of Canada’s Student Work Placement Program</h2> 
 <ol>	
 	<li> <a href="https://www.wil-ait.digital/en/"> WIL Digital </a> </li> 
